Makes build work with JDK 10